# symphony

./: .flake8  .gitignore  README.md  analysis.py  asdf.py  conditional_generation.slurm  conditional_generation_nonperiodic.slurm  conditional_generation_single.slurm  convert_to_gschnet_format.py  dataloader.py  dataset.py  dataset_convert.py  datatypes.py  debug.py  dispatch_fragmenter.py  dynamic_batcher.py  element_counts.csv  fragmenter.py  fragments.py  generate.slurm  generate_metal_first  generate_tmqm  get_datasets.py  gschnet-scripts.py  input_pipeline.py  input_pipeline_test.py  input_pipeline_tf.py  jraph-2.ipynb  linker_train  log  log_e3schnet  log_qm9_single  loss.py  loss_test.py  losses_1k.py  losses_1k_from_pkl.py  losses_1k_run.sh  losses_1k_top_bot_25  mace.ipynb  main.py  (+45 more)
analyses/: .gitignore  H2O.traj  README.md  analysis.py  analyze_conditional_generation.ipynb  analyze_generated.py  analyze_molecules.ipynb  analyze_molecules.py  analyze_molecules_edm.ipynb  analyze_molecules_openbabel.ipynb  analyze_silica.ipynb  bispectra.py  check_distances.py  check_qm9_valence.py  check_valence.py  check_valency.py  conditional_generation.py  conditional_generation_single.py  convert_to_gschnet_format.py  create_ase_db.py  elements.ini  evaluate_coord_num.py  generate_atom_removal_visualizations.py  generate_molecules.py  generate_molecules_batched.py  generate_molecules_intermediates.py  generate_molecules_multifocus.py  generate_molecules_old.py  generate_molecules_stream.py  generate_molecules_stream_new.py  generate_molecules_with_visualizations.py  log  (+20 more)
(+434 files in other folders)
